--- a/Launcher/Properties/Resources.resx
+++ b/Launcher/Properties/Resources.resx
@@ -139,4 +139,10 @@
   <data name="background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Artwork\background.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_2_yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Artwork\logo-2_yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="M55rLv3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\M55rLv3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
